--- a/css/main.css
+++ b/css/main.css
@@ -185,6 +185,7 @@ img {
 }
 
 .container {
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -195,14 +196,14 @@ img {
     max-width: 480px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .container {
-    max-width: 480px;
+    max-width: 768px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .container {
-    max-width: 480px;
+    max-width: 1200px;
   }
 }
 
