--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
     padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -8,14 +9,15 @@
   max-width: 480px;
  }
 
- @media screen and (min-width: 480px) {
-   max-width: 480px;
+ @media screen and (min-width: 768px) {
+   max-width: 768px;
 }
 
-@media screen and (min-width: 480px) {
-  max-width: 480px;
+@media screen and (min-width: 1200px) {
+  max-width: 1200px;
    }
  }
+ 
 .container-header {
   display: flex;
   align-items: center;
