--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,22 +1,27 @@
 .container {
   width: 100%;
-    padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 0 15px;
+  margin: 0 auto;
+}
 
- @media screen and (min-width: 480px) {
-  max-width: 480px;
- }
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
 
- @media screen and (min-width: 768px) {
-   max-width: 768px;
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
-  max-width: 1200px;
-   }
- }
+  .container {
+    width: 1200px;
+  }
+}
+ 
  
 .container-header {
   display: flex;
