--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -5,8 +5,16 @@
   justify-content: center;
   color: var(--icons);
   align-items: center;
-  width: 170px;
+  width: 210px;
   height: 92px;
   border: var(--icons) solid 1px;
   border-radius: 4px;
+
+  @media screen and (min-width: 768px) {
+    width: 226px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+  }
 }
