--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,7 +1,21 @@
 .team-space {
     display: flex;
-    margin-top: 50px;
     fill: currentColor;
+flex-wrap: wrap;
+justify-content: center;
+  margin-top: 50px;
+    
+    @media screen and (min-width: 768px) {
+      width: 768px;
+      display: flex;
+justify-content:center ;
+    }
+
+        @media screen and (min-width: 1200px) {
+          width: 1200px;
+          display: flex;
+          justify-content: center;
+        }
 }
 
 .team-space__item {
@@ -9,10 +23,9 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white);
-
-  &:not(:last-child) {
-  margin-right: 30px;
-}
+    
+        margin-right: 30px;
+        margin-bottom: 30px; 
 }
 
 .teamdiv-names {
@@ -30,3 +43,7 @@
     border-top: none;
     fill: currentColor;
 }
+
+
+
+
