--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,21 @@ img {
   display: flex;
   align-items: center;
 }
+@media screen and (min-width: 320px) {
+  .container-header {
+    width: 320px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container-header {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-header {
+    width: 1200px;
+  }
+}
 
 .doing-container {
   display: flex;
@@ -298,10 +313,18 @@ img {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
   color: var(--white);
+}
+@media screen and (min-width: 1200px) {
+  .heading {
+    max-width: 696px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+  }
 }
 
 .doing-txt {
@@ -601,6 +624,11 @@ img {
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 767px) {
+  .cross-svg {
+    border: none;
+  }
+}
 
 .icon {
   fill: currentColor;
@@ -648,6 +676,50 @@ img {
   }
 }
 
+.mobile-menu {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+.mobile-menu.is-open {
+  position: absolute;
+  display: block;
+  background-color: var(--white);
+  top: 100%;
+  left: 0;
+  width: 100%;
+}
+
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+@media screen and (min-width: 767px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .cross-icon {
+  display: none;
+}
+
+.menu-button.is-open .cross-icon {
+  display: block;
+}
+
+.menu-button.is-open .menu-icon {
+  display: none;
+}
+
 .underheader {
   background-color: var(--underheader);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img.jpg);
@@ -660,9 +732,30 @@ img {
   height: 600px;
   margin: 0 auto;
 }
+@media screen and (min-width: 768px) {
+  .underheader {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet-img.png);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .underheader {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img.jpg);
+  }
+}
 
 .header {
   border-bottom: var(--yes) solid 1px;
+}
+@media screen and (min-width: 320px) {
+  .header {
+    width: 320px;
+    position: relative;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header {
+    width: 768px;
+  }
 }
 .header-media-icon {
   margin-right: 10px;
@@ -678,7 +771,16 @@ img {
 .header-list-contacts {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
-  margin-left: auto;
+}
+@media screen and (min-width: 768px) {
+  .header-list-contacts {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-list-contacts {
+    display: flex;
+  }
 }
 
 .pages {
@@ -801,6 +903,11 @@ img {
 .footer {
   background-color: var(--footer);
   padding: 60px 0;
+}
+@media screen and (min-width: 320px) {
+  .footer {
+    width: 320px;
+  }
 }
 .footer .container {
   display: flex;
@@ -1054,6 +1161,7 @@ img {
 .benefits-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   color: var(--p-color);
 }
 .benefits-list__icons {
