--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,6 +2,7 @@
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+  
 
   @media screen and (min-width: 480px) {
       width: 480px;
@@ -22,7 +23,19 @@
 .container-header {
   display: flex;
   align-items: center;
+
+  @media screen and (min-width: 320px) {
+    width: 320px;
+  }
+
+  @media screen and (min-width: 768px) {
+   width: 768px;
+  }
+
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
 }
+ }
 
 .doing-container {
   display: flex;
@@ -34,4 +47,6 @@
     margin-right: 30px;
     position: relative;
   }
+  
 }
+
