--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,12 +1,17 @@
 .cross-svg {
-  padding: 6px;
+    padding: 6px;
   background-color: var(--white);
   width: 30px;
   height: 30px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width: 767px) {
+    border: none;
+  }
 }
+
 
 .icon {
   fill: currentColor;
