--- a/sass/components/_uppercase.scss
+++ b/sass/components/_uppercase.scss
@@ -22,11 +22,22 @@
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
   margin-bottom: 30px;
   color: var(--white);
+
+@media screen and (min-width:1200px) {
+  max-width: 696px;
+
+        font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+        
+  
 }
+ }
+  
 
 .doing-txt {
     position: absolute;
