--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,6 +1,11 @@
 .footer {
     background-color: var(--footer);
     padding: 60px 0;
+
+    @media screen and (min-width: 320px) {
+      width: 320px;
+    }
+
     & .container {
   display: flex;
   align-items: baseline;
