--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,10 +1,8 @@
 .underheader {
   background-color: var(--underheader);
-  background-image: linear-gradient(
-      to right,
+  background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
+      rgba(47, 48, 58, 0.4)),
     url(../images/img.jpg);
   background-position: center;
   background-repeat: no-repeat;
@@ -15,25 +13,62 @@
   height: 600px;
   margin: 0 auto;
 
+  @media screen and (min-width: 768px) {
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/tablet-img.png);
+    }
+  
+    @media screen and (min-width: 1200px) {
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/img.jpg);
+        
+    }
 
 }
+
 .header {
   border-bottom: var(--yes) solid 1px;
-  &-media-icon {
-  margin-right: 10px;
-  fill: currentColor;
+
+
+@media screen and (min-width: 320px) {
+    width: 320px;
+    position: relative;
+  }
+
+@media screen and (min-width: 768px) {
+  width: 768px;
 }
+
+  &-media-icon {
+    margin-right: 10px;
+    fill: currentColor;
+  }
 }
 
 .header-list {
   display: flex;
+
   &__item:not(last-child) {
-     margin-right: 50px;
+    margin-right: 50px;
   }
+
   &-contacts {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        display: flex;
-        margin-left: auto;
+    display: flex;
+   
+    
+    @media screen and (min-width: 768px) {
+      display: block;
+    }
+
+        @media screen and (min-width: 1200px) {
+          display: flex;
+         
+        }
   }
 }
 
@@ -46,11 +81,12 @@
   font-family: "Roboto";
   color: var(--bold-letters);
   font-weight: 500;
+
   &:active,
-&:hover,
-&:focus {
-  color: var(--background-button-color);
-}
+  &:hover,
+  &:focus {
+    color: var(--background-button-color);
+  }
 }
 
 .current-pages {
@@ -60,15 +96,15 @@
   color: var(--background-button-color);
 
   &::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
 
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--background-button-color);
-  border-radius: 2px;
-}
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--background-button-color);
+    border-radius: 2px;
+  }
 }
