--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
-.underheader {
+/* .underheader {
     background-color: var(--underheader);
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/img.jpg);
+        url(../images/mobile-img.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,4 +14,4 @@
     margin: 0 auto;
 
     
-}
+} */
