--- a/css/main.css
+++ b/css/main.css
@@ -189,11 +189,6 @@ img {
   padding: 0 15px;
   margin: 0 auto;
 }
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
@@ -208,11 +203,6 @@ img {
 .container-header {
   display: flex;
   align-items: center;
-}
-@media screen and (min-width: 320px) {
-  .container-header {
-    width: 320px;
-  }
 }
 @media screen and (min-width: 768px) {
   .container-header {
@@ -373,6 +363,10 @@ img {
   line-height: 1.19;
   color: var(--background-button-color);
   margin-right: 90px;
+}
+
+.mobile-menu.is-open .header-web__link {
+  display: none;
 }
 
 .header-web__studio {
@@ -684,25 +678,26 @@ img {
   .mobile-menu {
     display: none;
   }
-}
-.mobile-menu.is-open {
-  position: absolute;
-  display: block;
-  background-color: var(--white);
-  top: 100%;
-  left: 0;
-  width: 100%;
+  .mobile-menu.is-open {
+    position: absolute;
+    display: block;
+    background-color: var(--white);
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 796px;
+  }
 }
 
 .menu-button {
   display: inline-flex;
-  margin: 0;
-  padding: 0;
   border: none;
   background-color: transparent;
   cursor: pointer;
+  margin-left: auto;
+  margin-right: 15px;
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .menu-button {
     display: none;
   }
@@ -722,7 +717,7 @@ img {
 
 .underheader {
   background-color: var(--underheader);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img.jpg);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/mobile-img.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -745,17 +740,8 @@ img {
 
 .header {
   border-bottom: var(--yes) solid 1px;
-}
-@media screen and (min-width: 320px) {
-  .header {
-    width: 320px;
-    position: relative;
-  }
-}
-@media screen and (min-width: 768px) {
-  .header {
-    width: 768px;
-  }
+  padding-right: 15px;
+  position: relative;
 }
 .header-media-icon {
   margin-right: 10px;
@@ -764,22 +750,26 @@ img {
 
 .header-list {
   display: flex;
+  flex-direction: column;
 }
-.header-list__item:not(last-child) {
+.header-list__item:not(:last-child) {
   margin-right: 50px;
 }
 .header-list-contacts {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
+  flex-direction: column;
 }
 @media screen and (min-width: 768px) {
   .header-list-contacts {
     display: block;
+    margin-left: 50px;
   }
 }
 @media screen and (min-width: 1200px) {
   .header-list-contacts {
     display: flex;
+    margin-left: 280px;
   }
 }
 
@@ -792,6 +782,14 @@ img {
   color: var(--bold-letters);
   font-weight: 500;
 }
+@media screen and (max-width: 320px) {
+  .pages {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+  }
+}
 .pages:active, .pages:hover, .pages:focus {
   color: var(--background-button-color);
 }
@@ -802,16 +800,18 @@ img {
   position: relative;
   color: var(--background-button-color);
 }
-.current-pages::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  background-color: var(--background-button-color);
-  border-radius: 2px;
+@media screen and (min-width: 768px) {
+  .current-pages::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--background-button-color);
+    border-radius: 2px;
+  }
 }
 
 .clients {
