--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)),
-    url(../images/img.jpg);
+    url(../images/mobile-img.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -32,16 +32,8 @@
 
 .header {
   border-bottom: var(--yes) solid 1px;
-
-
-@media screen and (min-width: 320px) {
-    width: 320px;
-    position: relative;
-  }
-
-@media screen and (min-width: 768px) {
-  width: 768px;
-}
+padding-right: 15px;
+position: relative;
 
   &-media-icon {
     margin-right: 10px;
@@ -51,23 +43,26 @@
 
 .header-list {
   display: flex;
+flex-direction: column;
 
-  &__item:not(last-child) {
+  &__item:not(:last-child) {
     margin-right: 50px;
   }
 
   &-contacts {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: flex;
-   
+   flex-direction: column;
+    
     
     @media screen and (min-width: 768px) {
       display: block;
+      margin-left: 50px;
     }
 
         @media screen and (min-width: 1200px) {
           display: flex;
-         
+        margin-left: 280px;
         }
   }
 }
@@ -77,10 +72,19 @@
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-
+  
   font-family: "Roboto";
   color: var(--bold-letters);
   font-weight: 500;
+
+@media screen and (max-width: 320px) {
+      
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+}
+
 
   &:active,
   &:hover,
@@ -94,7 +98,7 @@
   padding-bottom: 32px;
   position: relative;
   color: var(--background-button-color);
-
+@media screen and (min-width: 768px) {
   &::after {
     position: absolute;
     left: 0;
@@ -107,4 +111,5 @@
     background-color: var(--background-button-color);
     border-radius: 2px;
   }
+}
 }
