--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,32 +1,36 @@
 .mobile-menu {
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
 
-    
-@media screen and (max-width: 767px) {
-    display: none;
-}
 
-    &.is-open {
+    @media screen and (max-width: 767px) {
+        display: none;
+
+         &.is-open {
         position: absolute;
         display: block;
         background-color: var(--white);
 
-        top: 100%;
+        top: 0%;
         left: 0;
         width: 100%;
+        height: 796px;
     }
+
+    }
+
+   
 }
 
 .menu-button {
     display: inline-flex;
-    margin: 0;
-    padding: 0;
     border: none;
     background-color: transparent;
     cursor: pointer;
+    margin-left: auto;
+    margin-right: 15px;
 
-    @media screen and (min-width: 767px) {
+    @media screen and (min-width: 768px) {
         display: none;
     }
 }
