--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -37,3 +37,10 @@
    margin-bottom: 11px;
    margin-left: 12px;
  }
+
+
+ .header-media-icon {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+ }
