--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -37,6 +37,14 @@ background-color: var(--background-button-color);
 }
 
 .contacts {
+  @media screen and (max-width: 767px) {
+    width: 231px;
+  height: 28px;
+margin-bottom: 64px;
+  color: var(--p-color);
+  }
+
+
   &:hover .social-media__icon,
   &:focus .social-media__icon {
     fill: var(--background-button-color);
@@ -45,4 +53,37 @@ background-color: var(--background-button-color);
 
 .contacts-list__item:not(:last-child) {
   margin-right: 50px;
+  
+  @media screen and (max-width: 767px) {
+    margin-bottom: 32px;
+  }
+
+}
+
+
+.menu-socials {
+@media screen and (max-width: 767px) {
+   &__list {
+  
+     display: flex;
+
+
+  &__item:not(:last-child) {
+    margin-right: 20px;
+ 
+}
+
+&__link {
+      font-size: 18px;
+      
+    color: var(--background-button-color);
+
+    &:not(:last-child) {
+      padding-right: 10px;
+     border-right: 1px solid  ;
+    }
+  }
+}
+}
+ 
 }
