--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -14,26 +14,26 @@
   margin: 0 auto;
 
   @media screen and (min-width: 768px) {
-      background-image: linear-gradient(to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)),
-        url(../images/tablet-img.png);
-    }
-  
-    @media screen and (min-width: 1200px) {
-      background-image: linear-gradient(to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)),
-        url(../images/img.jpg);
-        
-    }
+    background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+      url(../images/tablet-img.png);
+  }
+
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+      url(../images/img.jpg);
+
+  }
 
 }
 
 .header {
   border-bottom: var(--yes) solid 1px;
-padding-right: 15px;
-position: relative;
+  padding-right: 15px;
+  position: relative;
 
   &-media-icon {
     margin-right: 10px;
@@ -43,7 +43,19 @@ position: relative;
 
 .header-list {
   display: flex;
-flex-direction: column;
+margin-bottom: 202px;
+
+  @media screen and (max-width: 767px) {
+    flex-direction: column;
+    padding-top: 48px;
+    padding-left: 40px;
+
+    &-contacts {
+      padding-left: 40px;
+      flex-direction: column-reverse;
+     
+    }
+  }
 
   &__item:not(:last-child) {
     margin-right: 50px;
@@ -51,39 +63,37 @@ flex-direction: column;
 
   &-contacts {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-   flex-direction: column;
-    
-    
+   
+
+
     @media screen and (min-width: 768px) {
       display: block;
       margin-left: 50px;
     }
 
-        @media screen and (min-width: 1200px) {
-          display: flex;
-        margin-left: 280px;
-        }
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      margin-left: 280px;
+    }
   }
 }
-
 .pages {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
-  
+
   font-family: "Roboto";
   color: var(--bold-letters);
   font-weight: 500;
 
-@media screen and (max-width: 320px) {
-      
+  @media screen and (max-width: 767px) {
+
     font-weight: 500;
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.02em;
-}
+  }
 
 
   &:active,
@@ -98,18 +108,19 @@ flex-direction: column;
   padding-bottom: 32px;
   position: relative;
   color: var(--background-button-color);
-@media screen and (min-width: 768px) {
-  &::after {
-    position: absolute;
-    left: 0;
-    bottom: 0;
 
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background-color: var(--background-button-color);
-    border-radius: 2px;
+  @media screen and (min-width: 768px) {
+    &::after {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+
+      content: "";
+      display: block;
+      width: 100%;
+      height: 4px;
+      background-color: var(--background-button-color);
+      border-radius: 2px;
+    }
   }
-}
 }
