--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,5 +1,5 @@
 .mobile-menu {
-    display: flex;
+display: flex;
     align-items: center;
 
 
@@ -7,14 +7,15 @@
         display: none;
 
          &.is-open {
-        position: absolute;
+            flex-direction: column;
+        position: fixed;
         display: block;
         background-color: var(--white);
 
         top: 0%;
         left: 0;
         width: 100%;
-        height: 796px;
+        height: 100%;
     }
 
     }
@@ -29,6 +30,14 @@
     cursor: pointer;
     margin-left: auto;
     margin-right: 15px;
+    z-index: 1;
+    padding-top: 10px;
+transition: fill  250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+&:hover,
+&:focus {
+fill: var(--background-button-color);
+}
 
     @media screen and (min-width: 768px) {
         display: none;
@@ -45,4 +54,20 @@
 
 .menu-button.is-open .menu-icon {
     display: none;
+}
+
+.menu__contacts {
+    @media screen and (max-width: 767px) {
+       width: 296px;
+      
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+
+    letter-spacing: 0.02em;
+
+    color: var(--background-button-color); 
+    }
+    
 }
