--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -35,14 +35,13 @@ justify-content:center ;
 .team-background {
   background-color: var(--colorf5f4);
   padding-bottom: 94px;
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 
-.padding-names {
-    padding: 20px 24px;
-    border: 1px var(--border) solid;
-    border-top: none;
-    fill: currentColor;
-}
+
 
 
 
