--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -42,8 +42,8 @@
      line-height: 30px;
 
      margin-top: 30px;
-     margin-left: 164px;
-     margin-right: 164px;
+     margin-left: auto;
+     margin-right: auto;
 
      display: flex;
      align-items: center;
@@ -58,6 +58,12 @@
      height: 50px;
      cursor: pointer;
      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  width: 175px;
+  height: 40px;
+  margin-top: 0;
+}
      
      &:hover,
      &:focus {
