--- a/sass/components/_title-styles.scss
+++ b/sass/components/_title-styles.scss
@@ -39,6 +39,10 @@
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--p-color);
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 
@@ -228,13 +232,15 @@
   }
 
   .modal-comment {
-    width: 448px;
+    width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
       border-radius: 4px;
       outline: none;
       padding: 12px 16px;
       transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
       &:focus-within,
  &:hover,
  &:required{
