--- a/sass/components/_uppercase.scss
+++ b/sass/components/_uppercase.scss
@@ -6,7 +6,8 @@
   line-height: 1.14;
   
   &-why {
-     margin-bottom: 10px;
+  justify-content: center;
+      margin-bottom: 10px;
   color: var(--twentyone);
   }
 }
