--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -13,13 +13,19 @@
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
+
+@media screen and (max-width: 767px) {
+  width: 100%;
+}
+
   }
 }
 
 .benefits-list__item {
+ justify-content: center;
   display: block;
+margin-bottom: 30px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
+
+  
 }
