--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -16,7 +16,11 @@
 .list-icon-client {
   display: flex;
   flex-wrap: wrap;
+  @media screen and (max-width: 450px) {
+   justify-content: center; 
 
+  }
+ 
   &__item:not(:last-child) {
     text-align: center;
     margin-bottom: 30px;
