--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -8,12 +8,17 @@
     display: flex;
     align-items: center;
 
+@media screen and (min-width: 320px) {
+  width: 100%;
+}  
+
+
     @media screen and (max-width: 767px) {
       flex-direction: column;
     }
 
 @media screen and (min-width: 768px) {
-  display: flex;
+    display: flex;
       align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -61,7 +66,12 @@
 .div-footer {
   @media screen and (min-width: 768px) {
      margin-left: 70px;
-  }
+       }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      
+      margin-bottom: 65px;
+    }
 }
 
 .mail-form {
