--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -7,6 +7,11 @@
   height: 581px;
   background-color: var(--white);
 
+
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  width: 290px;
+}
   transform: translate(-50%, -50%) scale(1);
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -16,13 +21,9 @@
   &-lable:focus-within .modal-svg,
   &-lable:hover .modal-svg {
     fill: var(--background-button-color);
+
   }
 
-  @media screen and (max-width: 767px) {
-    width: 100%;
-    
-  }
- 
   
 }
 
@@ -139,9 +140,12 @@
 }
 
 .modal-contacts {
-  display: flex;
-  flex-direction: column;
+  justify-content: center;
+   flex-direction: column;
   align-items: center;
+  @media screen and (max-width: 767px) {
+     display: flex;
+  }
 
 }
 
@@ -180,7 +184,7 @@
   position: relative;
 
   & input {
-    width: 448px;
+    width: 100%;
     height: 40px;
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
