--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -1,11 +1,21 @@
 .nav-list-item:not(:last-child) {
-  margin-right: 8px;
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
 }
 
 .nav-list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
+
+@media screen and (max-width: 767px) {
+  justify-content: start;
+  flex-wrap: wrap;
+  gap: 8px;
+  row-gap: 15px;
+}
+
 }
 
 .images-list {
@@ -31,9 +41,11 @@
 }
 
 .images-list>.images-list-item {
-  width: 370px;
   margin-bottom: 30px;
-  margin-right: 30px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  
+  }
+  
 }
 
 .padding-names {
