--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,6 +2,10 @@
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
+
+  @media screen and (min-width: 480px) {
+      width: 480px;
+    }
   
   @media screen and (min-width: 768px) {
     width: 768px;
@@ -17,6 +21,10 @@
   display: flex;
   align-items: center;
   height: 60px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 
   @media screen and (min-width: 768px) {
     width: 768px;
