--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,6 +1,12 @@
 .section {
-  padding-bottom: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+
+@media screen and (min-width: 1200px) {
   padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 }
 
 .section-doing {
