--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -37,15 +37,20 @@ background-color: var(--background-button-color);
 }
 
 .contacts {
-  @media screen and (max-width: 767px) {
-    width: 231px;
+  @media screen and (min-width: 768px) {
   height: 28px;
   font-weight: 500;
-    font-size: 24px;
-margin-bottom: 64px;
+    font-size: 14px;
   color: var(--p-color);
+ 
   }
-
+&-list__item {
+  @media screen and (min-width: 1199px) {
+     padding-top: 32px;
+    padding-bottom: 32px;
+  }
+   
+  }
 
   &:hover .social-media__icon,
   &:focus .social-media__icon {
@@ -53,17 +58,12 @@ margin-bottom: 64px;
   }
 }
 
-.contacts-list__item:not(:last-child) {
-  margin-right: 50px;
- 
-}
-
 
 .menu-socials {
 
 &__list {
+  margin-bottom: 28px;
   display: flex;
-  padding-left: 40px;
   flex-wrap: wrap;
 }
 
