--- a/sass/components/_title-styles.scss
+++ b/sass/components/_title-styles.scss
@@ -40,6 +40,10 @@
   letter-spacing: 0.03em;
   color: var(--p-color);
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 354px;
+  }
+
   @media screen and (max-width: 767px) {
     width: 100%;
   }
@@ -81,16 +85,26 @@
   display: flex;
   align-items: center;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 24px;
   line-height: 1.71;
   letter-spacing: 0.02em;
-  
+  @media screen and (max-width: 767px) {
+     margin-top: 32px;
+      margin-bottom: 32px;
+  }
+ 
 
   color: var(--p-color);
+
+  @media screen and (min-width: 768px) {
+      height: 28px;
+      font-weight: 500;
+      font-size: 14px;
+      color: var(--p-color);
   
-  x
-
-
+      
+    }
+  
   &:hover,
 &:focus {
   color: var(--background-button-color);
@@ -176,6 +190,10 @@
   letter-spacing: 0.03em;
 
   color: var(--twentyone);
+
+  @media screen and (max-width: 1199px) {
+    font-size: 28px;
+  }
 }
 
 .our-clients {
@@ -186,6 +204,10 @@
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+
+  @media screen and (max-width: 1199px) {
+      font-size: 28px;
+    }
 }
 
 .footer-input {
