--- a/sass/components/_uppercase.scss
+++ b/sass/components/_uppercase.scss
@@ -6,7 +6,7 @@
   line-height: 1.14;
   
   &-why {
-  justify-content: center;
+  text-align: center;
       margin-bottom: 10px;
   color: var(--twentyone);
   }
