--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -3,6 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   color: var(--p-color);
+  gap: 30px;
 
   &__icons {
     display: flex;
@@ -13,6 +14,10 @@
     width: 270px;
     height: 120px;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 354px;
+    }
 
 @media screen and (max-width: 767px) {
   width: 100%;
