--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,28 +1,24 @@
 .footer {
   background-color: var(--footer);
   padding: 60px 0;
- 
+text-align: center;
 
 
   & .container {
     display: flex;
     align-items: center;
 
-@media screen and (min-width: 320px) {
-  width: 100%;
-}  
-
 
     @media screen and (max-width: 767px) {
       flex-direction: column;
     }
 
-@media screen and (min-width: 768px) {
-    display: flex;
+    @media screen and (min-width: 768px) {
+      display: flex;
       align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
 
   }
 
@@ -65,19 +61,24 @@
 
 .div-footer {
   @media screen and (min-width: 768px) {
-     margin-left: 70px;
-       }
+    margin-left: 70px;
+  }
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      
-      margin-bottom: 65px;
-    }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+
+    margin-bottom: 65px;
+  }
 }
 
 .mail-form {
   display: flex;
+
   @media screen and (min-width: 320px) and (max-width: 1199px) {
     flex-direction: column;
 
   }
+}
+
+.email {
+  margin-top: 60px;
 }
