--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,26 +15,26 @@
 
   @media screen and (min-resolusion: 2dppx) {
     background-color: var(--underheader);
-      background-image: linear-gradient(to right,
-          rgba(47, 48, 58, 0.4),
-          rgba(47, 48, 58, 0.4)),
-        url(../images/img-480x2px.jpg);
+    background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+      url(../images/img-480x2px.jpg);
   }
 
   @media screen and (min-width: 577px) {
     background-color: var(--underheader);
+    background-image: linear-gradient(to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+      url(../images/tablet-header.jpg);
+
+    @media screen and (min-resolution: 2dppx) and (max-width: 961px) {
+      background-color: var(--underheader);
       background-image: linear-gradient(to right,
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)),
-        url(../images/tablet-header.jpg);
-
-        @media screen and (min-resolution: 2dppx) and (max-width: 961px) {
-          background-color: var(--underheader);
-            background-image: linear-gradient(to right,
-                rgba(47, 48, 58, 0.4),
-                rgba(47, 48, 58, 0.4)),
-              url(../images/tablet-headerx2.jpg);
-        }
+        url(../images/tablet-headerx2.jpg);
+    }
 
   }
 
@@ -44,16 +44,16 @@
         rgba(47, 48, 58, 0.4)),
       url(../images/img.jpg);
 
-@media screen and (min-resolution: 2dppx) {
-  background-image: linear-gradient(to right,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)),
-      url(../images/imgx2.jpg);
-}
+    @media screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)),
+        url(../images/imgx2.jpg);
+    }
 
   }
 
-  
+
 
 }
 
@@ -68,8 +68,11 @@
 }
 
 .nav {
-  margin-bottom: auto;
+  @media screen and (max-width: 767px) {
+    margin-bottom: auto;
 }
+  }
+  
 
 .header-list {
   display: flex;
@@ -77,16 +80,14 @@
 
   @media screen and (max-width: 767px) {
     flex-direction: column;
-    padding-top: 48px;
-    padding-left: 40px;
+    
 
 
 
     &-contacts {
-      padding-left: 40px;
       flex-direction: column-reverse;
       width: 100%;
-     
+
     }
   }
 
@@ -96,7 +97,7 @@
 
   &-contacts {
     display: flex;
-   
+
 
 
     @media screen and (min-width: 768px) {
@@ -110,6 +111,7 @@
     }
   }
 }
+
 .pages {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-top: 32px;
@@ -117,7 +119,7 @@
   display: block;
 
   font-family: "Roboto";
-    color: var(--bold-letters);
+  color: var(--bold-letters);
   font-weight: 500;
 
   @media screen and (max-width: 767px) {
