--- a/sass/layouts/_menu.scss
+++ b/sass/layouts/_menu.scss
@@ -1,51 +1,49 @@
 .mobile-menu {
-display: flex;
+    display: flex;
     align-items: center;
-  z-index: 1;
+    z-index: 1;
+   
 
     @media screen and (max-width: 767px) {
-                 transform: translateX(100%);
-transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: none;
+ padding: 40px 40px 0 40px;
+        &.is-open {
+            position: fixed;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            background-color: var(--white);
 
-display: none;
+            top: 0%;
+            left: 0;
+            width: 100%;
+            height: 100%;
 
-         &.is-open {
-                position: fixed;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        background-color: var(--white);
 
-        top: 0%;
-        left: 0;
-        width: 100%;
-        height: 100%;
+            transform: translateX(0);
 
-   
-     transform: translateX(0);
-        
-    }
+        }
 
     }
 
-   
+
 }
 
 .menu-button {
-     right: 15px;
+    right: 15px;
     display: inline-flex;
     border: none;
     background-color: transparent;
     cursor: pointer;
     margin-left: auto;
     z-index: 10;
-   
-transition: fill  250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover,
-&:focus {
-fill: var(--background-button-color);
-}
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        fill: var(--background-button-color);
+    }
 
     @media screen and (min-width: 768px) {
         display: none;
@@ -62,7 +60,7 @@ fill: var(--background-button-color);
 
 .menu-button.is-open .cross-icon {
     display: block;
-   
+
 }
 
 .menu-button.is-open .menu-icon {
@@ -71,16 +69,16 @@ fill: var(--background-button-color);
 
 .menu__contacts {
     @media screen and (max-width: 767px) {
-    width: 100%;
-      
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 34px;
+        width: 100%;
 
-    letter-spacing: 0.02em;
+        font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 34px;
 
-    color: var(--background-button-color); 
+        letter-spacing: 0.02em;
+
+        color: var(--background-button-color);
     }
-    
+
 }
