--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -7,7 +7,7 @@
 .nav-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 
 @media screen and (max-width: 767px) {
   justify-content: start;
@@ -24,13 +24,7 @@
   }
 
 
-@media screen and (min-width: 768px) {
-  width: 768px;
-  width: 50%;
-}
-
 @media screen and (min-width: 1200px) {
-  width: 1200px;
   flex-basis: calc(100% / 3);
   display: flex;
   flex-wrap: wrap;
@@ -40,11 +34,14 @@
 
 }
 
+.images-list {
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
+}
+
 .images-list>.images-list-item {
-  margin-bottom: 30px;
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-  
-  }
+  width: 354px;
   
 }
 
@@ -53,4 +50,5 @@
   border: 1px var(--border) solid;
   border-top: none;
   fill: currentColor;
+  flex-grow: 1;
 }
