--- a/css/main.css
+++ b/css/main.css
@@ -123,16 +123,20 @@ img {
   background-color: var(--background-button-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  width: 200px;
-  height: 50px;
+  width: 175px;
+  height: 40px;
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .modal-button {
-    width: 175px;
-    height: 40px;
     margin-top: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal-button {
+    width: 200px;
+    height: 50px;
   }
 }
 .modal-button:hover, .modal-button:focus {
@@ -326,6 +330,11 @@ img {
     padding-bottom: 32px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .contacts-list__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
 .contacts:hover .social-media__icon, .contacts:focus .social-media__icon {
   fill: var(--background-button-color);
 }
@@ -357,9 +366,13 @@ img {
   line-height: 1.14;
 }
 .uppercase-why {
-  text-align: center;
   margin-bottom: 10px;
   color: var(--twentyone);
+}
+@media screen and (max-width: 767px) {
+  .uppercase-why {
+    text-align: center;
+  }
 }
 
 .heading {
@@ -787,7 +800,7 @@ img {
 .portfolio-link {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  flex-grow: 1;
 }
 
 .mobile-menu {
@@ -868,37 +881,47 @@ img {
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
-  padding: 200px 0;
-  max-width: 1600px;
-  height: 600px;
+  padding: 118px 0;
+  max-width: 480px;
+  height: 400px;
   margin: 0 auto;
 }
 @media screen and (min-resolusion: 2dppx) {
   .underheader {
+    max-width: 480px;
     background-color: var(--underheader);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img-480x2px.jpg);
   }
 }
-@media screen and (min-width: 577px) {
+@media screen and (min-width: 480px) {
   .underheader {
+    max-width: 768px;
     background-color: var(--underheader);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet-header.jpg);
   }
 }
-@media screen and (min-width: 577px) and (-webkit-min-device-pixel-ratio: 2) and (max-width: 961px), screen and (min-width: 577px) and (min-resolution: 2dppx) and (max-width: 961px) {
+@media screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (max-width: 959px), screen and (min-width: 480px) and (min-resolution: 2dppx) and (max-width: 959px) {
   .underheader {
+    max-width: 1199px;
     background-color: var(--underheader);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/tablet-headerx2.jpg);
   }
 }
 @media screen and (min-width: 960px) {
   .underheader {
+    max-width: 1600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img.jpg);
   }
 }
 @media screen and (min-width: 960px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 960px) and (min-resolution: 2dppx) {
   .underheader {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/imgx2.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .underheader {
+    padding: 200px 0;
+    min-height: 600px;
   }
 }
 
@@ -950,8 +973,8 @@ img {
 
 .pages {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   display: block;
   font-family: "Roboto";
   color: var(--bold-letters);
@@ -970,8 +993,8 @@ img {
 }
 
 .current-pages {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 12px;
+  padding-bottom: 12px;
   position: relative;
   color: var(--background-button-color);
 }
@@ -1100,6 +1123,14 @@ img {
     justify-content: space-around;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    text-align: left;
+  }
+}
 .footer-list-icon {
   display: flex;
   margin-top: 20px;
@@ -1152,8 +1183,15 @@ img {
   }
 }
 
-.email {
-  margin-top: 60px;
+@media screen and (max-width: 1199px) {
+  .email {
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 1199px) {
+  .email {
+    margin-left: auto;
+  }
 }
 
 .modal {
@@ -1169,9 +1207,14 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 479px) {
   .modal {
-    width: 290px;
+    max-width: 290px;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .modal {
+    width: 450px;
   }
 }
 .modal-lable:focus-within .modal-svg, .modal-lable:hover .modal-svg {
@@ -1287,7 +1330,7 @@ img {
 }
 
 .email input {
-  width: 358px;
+  width: 320px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -1298,9 +1341,14 @@ img {
   color: var(--white);
   outline: none;
 }
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 768px) {
   .email input {
-    width: 290px;
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .email input {
+    width: 358px;
   }
 }
 
@@ -1319,7 +1367,6 @@ img {
   position: relative;
 }
 .modal-lable input {
-  width: 100%;
   height: 40px;
   margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1327,6 +1374,16 @@ img {
   cursor: pointer;
   outline: none;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 479px) {
+  .modal-lable input {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .modal-lable input {
+    width: 370px;
+  }
 }
 .modal-lable:focus-within input, .modal-lable:hover input {
   border-color: var(--background-button-color);
@@ -1341,7 +1398,6 @@ img {
 }
 @media screen and (min-width: 768px) {
   .team-space {
-    width: 768px;
     display: flex;
     justify-content: center;
   }
@@ -1358,9 +1414,14 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white);
-  margin-bottom: 30px;
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .team-space__item {
+    margin-right: 15px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
   .team-space__item {
     margin-right: 30px;
   }
@@ -1372,7 +1433,6 @@ img {
 
 .team-background {
   background-color: var(--colorf5f4);
-  padding-bottom: 94px;
 }
 
 .benefits-list {
@@ -1406,6 +1466,8 @@ img {
 .benefits-list__item {
   justify-content: center;
   display: block;
+}
+.benefits-list__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -1418,7 +1480,7 @@ img {
 .nav-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 @media screen and (max-width: 767px) {
   .nav-list {
@@ -1426,6 +1488,16 @@ img {
     flex-wrap: wrap;
     gap: 8px;
     row-gap: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav-list {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .nav-list {
+    margin-bottom: 50px;
   }
 }
 
@@ -1458,6 +1530,4 @@ img {
   padding: 20px 24px;
   border: 1px var(--border) solid;
   border-top: none;
-  fill: currentColor;
-  flex-grow: 1;
 }/*# sourceMappingURL=main.css.map */
