--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -54,17 +54,20 @@
      background-color: var(--background-button-color);
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
      border-radius: 4px;
-     width: 200px;
-     height: 50px;
+      width: 175px;
+  height: 40px;
      cursor: pointer;
      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  width: 175px;
-  height: 40px;
+@media screen and (max-width: 767px) {
   margin-top: 0;
+ 
 }
-     
+      @media screen and (min-width: 768px) {
+    width: 200px;
+     height: 50px;
+  }
+
      &:hover,
      &:focus {
         background-color: #188CE8;
