--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -52,6 +52,12 @@ background-color: var(--background-button-color);
    
   }
 
+&-list__item:not(:last-child) {
+  @media screen and (min-width: 1200px) {
+    margin-right: 30px;
+  }
+}
+
   &:hover .social-media__icon,
   &:focus .social-media__icon {
     fill: var(--background-button-color);
