--- a/sass/components/_uppercase.scss
+++ b/sass/components/_uppercase.scss
@@ -6,7 +6,9 @@
   line-height: 1.14;
   
   &-why {
-  text-align: center;
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
       margin-bottom: 10px;
   color: var(--twentyone);
   }
