--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -20,6 +20,12 @@ text-align: center;
       justify-content: space-around;
     }
 
+        @media screen and (min-width: 1200px) {
+          display: flex;
+          flex-wrap: wrap;
+          align-items: baseline;
+          text-align: left;
+        }
   }
 
   &-list-icon {
@@ -80,5 +86,11 @@ text-align: center;
 }
 
 .email {
-  margin-top: 60px;
+  @media screen and (max-width: 1199px) {
+     margin-top: 60px;
+  }
+
+  @media screen and (min-width: 1199px) {
+    margin-left: auto;
+  }
 }
