--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -9,8 +9,12 @@
 
 
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  width: 290px;
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  max-width: 290px;
+}
+
+@media screen and (min-width:480px) and (max-width: 767px) {
+  width: 450px;
 }
   transform: translate(-50%, -50%) scale(1);
   border-radius: 4px;
@@ -151,7 +155,7 @@
 
 
 .email input {
-  width: 358px;
+  width: 320px;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -162,9 +166,13 @@
   color: var(--white);
   outline: none;
 
-@media screen and (max-width: 320px) {
-  width: 290px;
+@media screen and (min-width: 768px) {
+ width: 450px;
   
+}
+
+@media screen and (min-width: 1200px) {
+  width: 358px;
 }
 
 }
@@ -184,7 +192,14 @@
   position: relative;
 
   & input {
-    width: 100%;
+    @media screen and (max-width: 479px) {
+       width: 100%;
+    }
+
+@media screen and (min-width:480px) and (max-width: 767px) {
+  width: 370px;
+}
+
     height: 40px;
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
