--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -7,13 +7,21 @@
 .nav-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 
 @media screen and (max-width: 767px) {
   justify-content: start;
   flex-wrap: wrap;
   gap: 8px;
   row-gap: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  margin-bottom: 50px;
 }
 
 }
@@ -38,6 +46,7 @@
 display: flex;
 flex-wrap: wrap;
 gap: 30px;
+
 }
 
 .images-list>.images-list-item {
@@ -49,6 +58,6 @@ gap: 30px;
   padding: 20px 24px;
   border: 1px var(--border) solid;
   border-top: none;
-  fill: currentColor;
-  flex-grow: 1;
+ 
+ 
 }
