--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -6,8 +6,8 @@ justify-content: center;
   margin-top: 50px;
     
     @media screen and (min-width: 768px) {
-      width: 768px;
-      display: flex;
+    
+           display: flex;
 justify-content:center ;
     }
 
@@ -24,19 +24,21 @@ justify-content:center ;
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white);
     
-@media screen and (min-width: 767px) {
-   margin-right: 30px;
-}
-               margin-bottom: 30px; 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+margin-right: 15px;
+margin-bottom: 30px;
 }
 
+@media screen and (min-width: 1200px) {
+  margin-right: 30px;
+}
+ }
 .teamdiv-names {
   padding: 30px 0;
 }
 
 .team-background {
   background-color: var(--colorf5f4);
-  padding-bottom: 94px;
 
 }
 
