--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -155,7 +155,7 @@
 
 
 .email input {
-  width: 320px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -166,7 +166,7 @@
   color: var(--white);
   outline: none;
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480px) {
  width: 450px;
   
 }
