--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -23,6 +23,10 @@ justify-content:center ;
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: var(--white);
+
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
     
 @media screen and (min-width: 768px) and (max-width: 1199px) {
 margin-right: 15px;
